src/objects/TR_Training_Event__c.object
<CustomObject>
    <fields>
        <fullName>Instructor__c</fullName>
        <label>Instructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBSList__c</fullName>
        <label>PBS List</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PB_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>PB_Document__c</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location</label>
        <referenceTo>Service_Location__c</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Training Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingTime__c</fullName>
        <label>Training Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>TR_Training Event</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>TR_Training Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TR_Training Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>